Collection types no longer mutable; Empty Applicable Value Sets translates to null